CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(Blitz3D)

IF (NOT WIN32)
    MESSAGE(FATAL_ERROR "Cannot build for a system that is not Windows, sorry.")
ENDIF (NOT WIN32)

ADD_SUBDIRECTORY("blitz")
ADD_SUBDIRECTORY("blitz3d")
ADD_SUBDIRECTORY("asm_makeinsts")
ADD_SUBDIRECTORY("bblaunch")
ADD_SUBDIRECTORY("blitzide")
ADD_SUBDIRECTORY("compiler")
ADD_SUBDIRECTORY("linker")
ADD_SUBDIRECTORY("debugger")
ADD_SUBDIRECTORY("config")
ADD_SUBDIRECTORY("stdutil")
ADD_SUBDIRECTORY("gxruntime")
ADD_SUBDIRECTORY("bbruntime")
ADD_SUBDIRECTORY("bbruntime_dll")
