CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
PROJECT (AsmMakeInsts)

SET (ASMMAKEINSTS_BUILDLICATION "../asm_makeinsts")
file(GLOB_RECURSE ASMMAKEINSTS_SOURCES "*.cpp")
file(GLOB_RECURSE ASMMAKEINSTS_INCLUDES "*.hpp")

ADD_EXECUTABLE (${ASMMAKEINSTS_BUILDLICATION} ${ASMMAKEINSTS_SOURCES} ${ASMMAKEINSTS_INCLUDES})
