CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
PROJECT (BBRuntimeDLL)

SET (BBRUNTIMEDLL_BUILDLICATION "../bbruntime_dll")
file(GLOB_RECURSE BBRUNTIMEDLL_SOURCES "*.cpp")
file(GLOB_RECURSE BBRUNTIMEDLL_INCLUDES "*.h")

ADD_EXECUTABLE (${BBRUNTIMEDLL_BUILDLICATION} ${BBRUNTIMEDLL_SOURCES} ${BBRUNTIMEDLL_INCLUDES})
